removed unused entities

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /src/UnitTestInPractice.Domain/obj
 /src/UnitTestInPractice.Share/.vs
 /src/UnitTestInPractice.Share/bin/Debug/net8.0
+/src/.vs/ProjectEvaluation
