--- a/src/UnitTestInPractice.Application/UnitTestInPractice.Application.csproj
+++ b/src/UnitTestInPractice.Application/UnitTestInPractice.Application.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\UnitTestInPractice.Domain\UnitTestInPractice.Domain.csproj" />
+    <ProjectReference Include="..\UnitTestInPractice.Share\UnitTestInPractice.Share.csproj" />
+  </ItemGroup>
+
 </Project>
