added unit test and ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,17 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/src/UnitTestInPractice.Infrastructure/obj
-/src/.vs/UnitTestInPractice.Share
-/src/UnitTestInPractice.Application/obj
-/src/UnitTestInPractice.Domain/bin/Debug/net8.0
-/src/UnitTestInPractice.Domain/obj
-/src/UnitTestInPractice.Share/.vs
-/src/UnitTestInPractice.Share/bin/Debug/net8.0
-/src/.vs/ProjectEvaluation
+# Ignore all bin and obj directories
+**/bin/
+**/obj/
+
+# Ignore user-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Ignore other temporary files
+*.log
+*.vs/
